--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,17 @@
   color: #61dafb;
 }
 
+.error1 {
+  border:1px solid green;
+}
+
+.error2 {
+  border:1px solid red;
+}
+
+.error3 {
+  border:1px solid blue;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
