--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,9 @@
   border:1px solid blue;
 }
 
+.testing {
+  border: 1px solid red
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
